tests/NormalTests/paczka1/small_fuzzy/78681968.err
Error in line 1: 3dKZokR A260 5,9
Error in line 3: 3dKZokR S274 4,5
Error in line 10: S493 S274 24,1
Error in line 12: rZ3dEqD A432 6,8
